# openhamster

./: .env.example  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  README.zh-CN.md  SECURITY.md  alembic.ini  main.py  mypy.ini  pyproject.toml  pytest.ini  ruff.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  pages.yml
alembic/: env.py
alembic/versions/: 0001_initial_api_schema.py
apps/web/: components.json  index.html  package-lock.json  package.json  playwright.config.ts  tailwind.config.ts  tsconfig.json  tsconfig.node.json  tsconfig.tsbuildinfo  vite.config.ts
config/: README.md  base.yaml  local.yaml  paper_trading.example.yaml  policy.example.yaml  policy.yaml
docs/: ARCHITECTURE.md  CONFIG_BOUNDARIES.md  DECISIONS.md  DESKTOP_PACKAGING_PROPOSAL.md  IMPLEMENTATION_STATUS.md  JOINQUANT_STRATEGY_RESEARCH.md  LIVE_READINESS.md  LLM_PROVIDER_MIGRATION.md  MAC_MINI_DEPLOYMENT.md  NEW_THREAD_HANDOFF.md  PROJECT_CHECKLIST.md  PROJECT_CONTEXT.md  PROJECT_OVERVIEW.md  README.md  RELEASE_CHECKLIST.md  RUNBOOK.md  STRATEGY_KNOWLEDGE_LAYER.md  TUSHARE_PURCHASE_PLAN.md  V2_TRACKING.md  configuration.md  quant_trader_agent_方案_v3.md  research_log.md
docs/releases/: v0.1.0.md  (+1 more)
scripts/: build_frontend.sh  dry_run.py  generate_acceptance_report.py  prepare_local_runtime.sh  render_launchd_plist.sh  render_watchdog_plist.sh  run_api.sh  run_paper_trading_once.py  run_watchdog.sh  sqlite_to_postgres.py  start_local_daemon.sh
site/: 404.html  index.html  styles.css
tests/: test_akshare_provider.py  test_backtest_engine.py  test_backtester.py  test_broker.py  test_channel_breakout.py  test_data_provider.py  test_e2e_real_backtest.py  test_longbridge_broker.py  test_ma_cross_strategy.py  test_macd_strategy.py  test_mean_reversion.py  test_minshare_provider.py  test_notifier.py  test_orchestrator.py  test_paper_account.py  test_paper_broker_cn_rules.py  test_paper_executor.py  test_paper_service.py  test_regime.py  test_reviewer.py  test_risk_manager.py  test_risk_optimize.py  test_rsi_strategy.py  test_source_manager_routing.py  test_stooq_provider.py  test_strategy_factory.py  test_symbols.py  test_walk_forward.py
(+234 files in other folders)
