[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "openhamster"
version = "0.2.0"
description = "OpenHamster auditable strategy factory with agent-driven research and paper trading"
requires-python = ">=3.10"
dependencies = [
    "alembic>=1.14",
    "fastapi>=0.115",
    "pandas>=2.0",
    "numpy>=1.24",
    "pydantic>=2.0",
    "pydantic-settings>=2.6",
    "pyyaml>=6.0",
    "sqlalchemy>=2.0",
    "httpx>=0.27",
    "requests>=2.31",
    "uvicorn>=0.32",
    "yfinance>=0.2.40",
    "akshare>=1.14",
    "tushare>=1.4.18",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.4",
    "mypy>=1.10",
]

[project.scripts]
openhamster-api = "openhamster.api.main:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
